--- a/screens/components/Toggle.css
+++ b/screens/components/Toggle.css
@@ -1,14 +1,20 @@
-.toggle-container{
+.toggle-container-1 {
     position: absolute;
-    top: 2em;
-    right: 2em;
+    top: 8em;
+    left: 2em;
 }
 
-.toggle {
+.toggle-container-2 {
+    position: absolute;
+    top: 12em;
+    left: 2em;
+}
+
+.toggle{
     visibility: hidden;
 }
 
-.toggle + label{
+.toggle + label {
     display: flex;
     align-items: center;
     font-size: 1.5em;
@@ -16,8 +22,8 @@
     color: var(--primary-text-color);
 }
 
-.toggle +label::before{
-    content:"";
+.toggle + label::before {
+    content: "";
     height: 1em;
     width: 2em;
     border-radius: 1em;
@@ -26,8 +32,12 @@
     transition: background-color 250ms ease-in-out;
 }
 
-.toggle + label::after{
-    content:"";
+.toggle:checked + label::before {
+    background-color: var(--toggle-background-checked);
+}
+
+.toggle + label::after {
+    content: "";
     height: 0.8em;
     width: 0.8em;
     background-color: var(--toggle-foreground);
@@ -36,6 +46,7 @@
     transition: background-color 250ms ease-in-out, transform 250ms ease-in-out;
 }
 
-.toggle:checked + label::after{
+.toggle:checked + label::after {
+    background-color: var(--toggle-foreground-checked);
     transform: translateX(100%);
 }
