--- a/screens/screens.css
+++ b/screens/screens.css
@@ -6,6 +6,7 @@
     align-items: center;
     background-color: var(--background-color);
     transition: background-color 250ms ease-in-out;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1{
@@ -16,16 +17,16 @@ p{
     color: var(--primary-text-color);
 }
 
-:root{
-    --background-color:white;
-    --primary-text-color:black;
-    --toggle-background:#f0eb9d;
-    --toggle-foreground:#ffd000;
+:root {
+    --background-color: white;
+    --primary-text-color: black;
+    --toggle-background: #e4e4e4;
+    --toggle-foreground: #696969;
+    --toggle-background-checked: #283452; /* Color for Toggle1 when checked */
+    --toggle-foreground-checked: #00a6ff; /* Color for Toggle2 when checked */
 }
 
 [data-theme="dark"] {
-    --background-color:black;
-    --primary-text-color:white;
-    --toggle-background:#283452;
-    --toggle-foreground:#00a6ff;
+    --background-color: rgb(25, 25, 25);
+    --primary-text-color: white;
 }
